--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Data Harmonist</title>
 </head>
 <body>
-Welcome to the Data Harmonist homepage!
+  Welcome to the Data Harmonist homepage!
+  
+  <a href="/presentations.html">Presentations</a>
 </body>
 </html>
